# ToriSideBar

./: .gitignore  CHANGELOG.md  LICENSE  NEW_TAB_DESIGN.md  README.md  README.zh.md  RELEASE_NOTE.md  ROADMAP.md  index.html  package-lock.json  package.json  release-note-v0.6.0.md  release-note-v0.6.1.md  release-note-v0.6.2.md  release-note-v0.6.3.md  release-note-v1.1.0.md  release-note-v1.2.0.md  release-note-v1.3.0.md  release-note-v1.4.0.md  release-note-v1.4.1.md  release-note-v1.4.2.md  release_notes_v0.1.10.md  release_notes_v0.1.8.md  release_notes_v0.1.9.md  start.bat  start.vbs
.github/workflows/: release.yml
public/: guide.html
src/: App.css  App.tsx  NoteWindow.tsx  ToolsWindow.tsx  i18n.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/inject/: navbar.js
src-tauri/src/: animation.rs  commands.rs  guide_native.rs  inject.rs  lib.rs  main.rs  monitor.rs  state.rs  window.rs  window_state.rs
src/components/: AddAppModal.tsx  AppIcon.tsx  AppListItem.tsx  ErrorBoundary.tsx  ExitConfirmModal.tsx  FaviconImg.tsx  ImportEdgeAppsModal.tsx  LanguageSelector.tsx  ManageAppItem.tsx  MarkdownEditor.tsx
src/hooks/: useActiveApps.ts  useApps.ts  useAutostart.ts  useDragSort.ts  useNotes.ts  useSettings.ts  useTheme.ts  useTriggerWidth.ts  useUpdateCheck.ts
src/locales/: en.ts  zh.ts
src/themes/: index.ts
src/types/: index.ts
src/utils/: emoji.ts  favicon.ts  markdown.ts  storage.ts
