[package]
name = "torisidebar"
version = "0.3.0"
description = "Edge Sidebar Replacement"
authors = ["you"]
edition = "2021"

[lib]
name = "edge_sidebar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol", "tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
winapi = { version = "0.3", features = ["winuser", "synchapi", "handleapi", "errhandlingapi", "winerror", "ntdef", "wincon", "libloaderapi"] }
